--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="conversation_controls_bottom">
           <textarea id="conversation_input" placeholder="Type your message here..."></textarea>
-          <button id="conversation_send">Send</button>
+          <button id="conversation_send" onclick="sendMessage()">Send</button>
         </div>
       </div>
     </div>
