--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
 											<li class="active"><a href="#">Home <i class="icofont-rounded-down"></i></a></li>
 											<li><a href="demo.html">Demo</a></li>
 											<li><a href="services.html">Services </a></li>
-											<li><a href="Features.html">Features </a></li>
+											<li><a href="features.html">Features </a></li>
 											<li><a href="clients.html">Clients </a></li>
 											<li><a href="pricing.html">Pricing </a></li>
 											<li><a href="blogs.html">Blogs <i class="icofont-rounded-down"></i></a>
