--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Sapient Clinician</title>
-    <link rel="stylesheet" href="demostyle.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="screen" id="conversation_screen">
