create new scenarios

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
           <input type="checkbox" id="diagnose"> Submit Diagnosis?
         </div>
         <script src="main.js"></script>
-        <script>startConversation();</script>
+        <script>init();</script>
         
 
         <div class="conversation_controls_bottom">
