--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
 
             </script>
             <textarea id="conversation_input" placeholder="Type your message here..."></textarea>
-            <button id="conversation_send" onclick="sendMessage(isDiagnosed)">Send</button>
+            <button id="conversation_send" onclick="sendMessage(isDiagnosed, null )">Send</button>
             <button id="download_history" onclick="downloadTxtFile()">Finish Exam</button>
 
 
