--- a/public/formdemo/index.html
+++ b/public/formdemo/index.html
@@ -270,7 +270,7 @@ const settingOptions = [
 ];
 createDropdown(storyElement, 'settingDropdown', 'setting', 'text', 'Setting:', settingOptions);
 
-createTextarea(storyElement, 'Reason_for_visit', '', 'Patient complains of chest pain and...', 'Reason for visit/chief complaint or concern:');
+createTextarea(storyElement, 'Reason_for_visit', 'Patient complains of chest pain and...', 'Reason for visit or chief complaint/concern:');
 createTextarea(storyElement, 'History_of_Present_Illness', 'The patient complains of persistant chest pain lasting 2 hours... Consider the OLDCARTS mnemonic and any other pertinent information.', 'History of Present Illness:*', rows = 10,);
 
 const heentReviewOfSymptomsGroupOptions = [
