--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <option value="Clinician">Clinician</option>
             <option value="Lab">Lab</option>
           </select>
-          <input type="checkbox" id="diagnose"> Submit Diagnosis?
+          <!--<input type="checkbox" id="diagnose"> Submit Diagnosis?-->
         </div>
         <script src="main.js"></script>
         <script>init();</script>
