--- a/public/index.html
+++ b/public/index.html
@@ -59,8 +59,22 @@
               }
               });
 
+              // Get the input field
+              var input = document.getElementById("conversation_input");
+
+              // Execute a function when the user presses a key on the keyboard
+              input.addEventListener("keypress", function(event) {
+                // If the user presses the "Enter" key on the keyboard
+                if (event.key === "Enter") {
+                  // Cancel the default action, if needed
+                  event.preventDefault();
+                  // Trigger the button element with a click
+                  document.getElementById("conversation_send").click();
+                }
+              });
+
             </script>
-            <textarea id="conversation_input" placeholder="Type your message here..."></textarea>
+            <textarea id="conversation_input" onchange="sendMessage(isDiagnosed, null)" placeholder="Type your message here..."></textarea>
             <button id="conversation_send" onclick="sendMessage(isDiagnosed, null )">Send</button>
             <button id="download_history" onclick="downloadTxtFile()">Finish Exam</button>
 
